# webrtc

./: BUILD.gn  webrtc.gni
api/audio_codecs/: BUILD.gn  audio_encoder.h  builtin_audio_decoder_factory.cc  builtin_audio_encoder_factory.cc
api/audio_codecs/lyra/: BUILD.gn  audio_decoder_lyra.cc  audio_decoder_lyra.h  audio_encoder_lyra.cc  audio_encoder_lyra.h
examples/: BUILD.gn
examples/androidapp/src/org/appspot/apprtc/: CallActivity.java  ConnectActivity.java  PeerConnectionClient.java
examples/objc/AppRTCMobile/: ARDAppClient.m  ARDAppEngineClient.m
examples/objc/AppRTCMobile/ios/: ARDAppDelegate.mm  ARDMainViewController.m  ARDVideoCallView.m
modules/audio_coding/: BUILD.gn
modules/audio_coding/codecs/lyra/: audio_decoder_lyra.cc  audio_decoder_lyra.h  audio_encoder_lyra.cc  audio_encoder_lyra.h
pc/: channel.cc
sdk/: BUILD.gn
sdk/android/: BUILD.gn
sdk/objc/components/audio/: RTCAudioSessionConfiguration.m
sdk/objc/components/capturer/: RTCCameraVideoCapturer.m
sdk/objc/components/renderer/metal/: RTCMTLRenderer.mm  RTCMTLVideoView.m
sdk/objc/components/video_codec/: RTCDefaultVideoDecoderFactory.m  RTCDefaultVideoEncoderFactory.m  RTCVideoEncoderH264.mm
sdk/objc/helpers/: RTCCameraPreviewView.m
system_wrappers/: BUILD.gn
tools_webrtc/ios/: build_ios_libs.py  generate_modulemap.py  generate_umbrella_header.py  merge_ios_libs.py
